--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -14,5 +14,18 @@
 }
 #map-canvas{
     height: 500px;
-    width: 100%;
+    width: 700px;
+    
+}
+#right{
+    position: absolute;
+    right: 3px;
+    top: 40px;
+    height: 400px;
+    width: 600px
+}
+#maptype{
+    position: absolute;
+    left: 600px;
+    z-index: +100;
 }
