--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -12,17 +12,22 @@
     font-weight: 300;
     text-overflow: ellipsis;
 }
+#hide{
+    position: absolute;
+    left: 760px;
+    top: 40px;
+}
 #map-canvas{
     height: 500px;
     width: 700px;
-    
 }
 #right{
     position: absolute;
-    right: 3px;
+    left: 760px;
     top: 40px;
     height: 400px;
-    width: 600px
+    width: 600px;
+    display: none;
 }
 #maptype{
     position: absolute;
