--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2,7 +2,9 @@
     Created on : 21.07.2014, 10:31:40
     Author     : Stefan
 */
-
+body{
+    font-family: Roboto;
+}
 #search {
     background-color: #fff;
     padding: 0 11px 0 13px;
@@ -14,29 +16,31 @@
 }
 #hide{
     position: absolute;
-    left: 760px;
-    top: 40px;
+    right: 100px;
+    top: 10px;
 }
 #map-canvas{
-    height: 500px;
-    width: 700px;
+    height: 600px;
+    width: auto;
 }
 #right{
+    border-radius: 5px;
     position: absolute;
-    left: 760px;
-    top: 40px;
-    height: 400px;
-    width: 600px;
+    right: 10px;
+    top: 10px;
+    height: 200px;
+    width: 320px;
     display: none;
-}
-#dropoff{
-    width: 300px;
-}
-#pickup{
-    width: 300px;
+    background-color: #e0e0e0;
 }
 #maptype{
     position: absolute;
-    left: 600px;
+    right: 350px;
     z-index: 100;
+}
+.options {
+    position: relative;
+    left: 5px;
+    top: 5px;
+    width: 300px;
 }
