--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -51,3 +51,12 @@ body{
     color: red;
     visibility: hidden;
 }
+#signup{border-radius: 5px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    height: 250px;
+    width: 320px;
+    display: none;
+    background-color: #E5E3DF;
+}
