modification in style of the page

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -67,3 +67,9 @@ body{
     height: 80px;
     width: 250px;
 }
+.but{
+    width: 70px;
+    border: 0px;
+    background-color: #bfb9c5;
+    border-radius: 8px;
+}
